@@ -11,7 +11,9 @@ data/glade/form-signing-dialog.glade
 data/glade/prefs-dialog.glade
 data/glade/print.glade
 embed/downloader-view.c
+embed/ephy-embed.c
 embed/ephy-embed-shell.c
+embed/ephy-embed-utils.c
 embed/ephy-encodings.c
 embed/ephy-history.c
 embed/mozilla/ContentHandler.cpp
@@ -28,8 +30,22 @@ embed/mozilla/GtkNSSDialogs.cpp
 embed/mozilla/GtkNSSKeyPairDialogs.cpp
 embed/mozilla/GtkNSSSecurityWarningDialogs.cpp
 embed/mozilla/MozDownload.cpp
+embed/mozilla/mozilla-embed.cpp
 embed/mozilla/mozilla-embed-single.cpp
 embed/mozilla/mozilla-notifiers.cpp
+embed/xulrunner/components/ContentHandler.cpp
+embed/xulrunner/components/EphyAboutModule.cpp
+embed/xulrunner/components/FilePicker.cpp
+embed/xulrunner/components/GeckoCookiePromptService.cpp
+embed/xulrunner/components/GeckoFormSigningDialog.cpp
+embed/xulrunner/components/GeckoPrintService.cpp
+embed/xulrunner/components/GeckoPrintSession.cpp
+embed/xulrunner/components/GeckoPromptService.cpp
+embed/xulrunner/components/GtkNSSClientAuthDialogs.cpp
+embed/xulrunner/components/GtkNSSDialogs.cpp
+embed/xulrunner/components/GtkNSSKeyPairDialogs.cpp
+embed/xulrunner/components/GtkNSSSecurityWarningDialogs.cpp
+embed/xulrunner/components/MozDownload.cpp
 lib/eel-gconf-extensions.c
 lib/egg/egg-editable-toolbar.c
 lib/egg/egg-toolbar-editor.c
