@@ -1,3 +1,8 @@
+2007-10-29  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* POTFILES.in: Add a whole bunch of new files.
+	* nb.po: Updated Norwegian bokmål translation.
+
 2007-10-27  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Updated Norwegian bokmål translation.
